arlex-derive/tests/cases/accounts_account_type_no_has_one.stderr
error: account_type must follow a has_one constraint
 --> tests/cases/accounts_account_type_no_has_one.rs:5:35
  |
5 |     #[account(mut, account_type = "SomeType")]
  |                                   ^^^^^^^^^^
